# audiototxt

./: .env.example  .gitignore  .vercelignore  BUILD_AND_DEPLOY.md  CHANGES.md  DEPLOY_TO_VERCEL.md  QUICK_START_VERCEL.md  README.md  VERCEL_SETUP_SUMMARY.md  VERCEL_STATIC_FILES_FIX.md  bot_state.py  fastapi_dev_app.py  main.py  pyproject.toml  requirements.txt  telegram_bot.py  vercel.json
api/: index.py
fastapi/: README.md  app.py  dev_app.py  run.py
fastapi/static/css/: style.css
fastapi/static/js/: main.js
fastapi/templates/: index.html
tests/: test_auth_config.py  test_bot_state.py  test_prompt_builder.py  test_telegram_bot_formatting.py  test_youtube_direct.py
